--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,17 @@
     -->
     <title>Collabboard Free Online Whiteboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9GSWH56YCT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-9GSWH56YCT');
+  </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
